# mtg_db

./: .gitignore  Cargo.toml  Readme.md  build_spellfix.sh  shell.nix
src/: add_list.rs  dump.rs  jsonl.rs  main.rs  sqlite.rs
