[package]
name = "mtg_db"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5.11"
deunicode = "1.3.0"
indicatif = { version = "0.16.2", features = ["rayon"] }
promptly = "0.3.0"
rayon = "1.5.1"
rusqlite = { version = "0.25.3", features = ["bundled", "load_extension"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
structopt = "0.3.21"
